fix spacing

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -4,6 +4,18 @@
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 
+.leaflet-verticalcenter {
+    position: absolute;
+    top: 15%; /* possible because the placeholder's parent is the map */
+    transform: translateY(-50%); /* using the CSS3 Transform technique */
+    padding-top: 10px;
+}
+
+.leaflet-verticalcenter .leaflet-control {
+    margin-bottom: 10px;
+}
+
+
 body {
     width: 100%;
     height: 100%;
@@ -151,7 +163,7 @@ a:focus {
 .intro {
     display: table;
     width: 100%;
-    height: auto;
+    height: 100%;
     padding: 100px 0;
     text-align: center;
     color: #fff;
@@ -279,10 +291,30 @@ a:focus {
 }
 
 .map-section {
-    padding-top: 100px;
-    padding-bottom: 550px;
+    position: relative;
+    height: 65%;
+/*    z-index: -1;*/
 }
 
+@media(min-width:768px) {
+        .map-section {
+        height: 85%;
+        padding: 0;
+        z-index: -1;
+    }
+}
+
+
+#search-bar{
+    height: 35%;
+    position: relative;
+}
+@media(min-width:767px) {
+    #search-bar {
+        height: 15%;
+        margin-top: 0px;
+    }
+}
 
 .download-section {
     width: 100%;
@@ -299,15 +331,13 @@ a:focus {
 
 
 #map {
+    float: left;
     width: 100%;
     height: 100%;
     position: fixed;
-/*    margin-top: 10px;*/
     border: 2px black;
     z-index: 0;
 }
-
-
 
 @media(min-width:767px) {
     .content-section {
